2.6.7 (08.04.2020):

* Fix bug causing stretched images after cropping.
* Don't allow errors without page numbers to hang GUI.


2.6.6 (06.04.2020):

* Support importing PDF with different resolutions in x and y directions.
* Fix bug applying paper after option set SANE_INFO_INEXACT
  Closes bug #348 (paper size selection has no effect for US Letter / US Legal)
* Update to Bulgarian translation (thanks to Berov)
* Update to Turkish translation (thanks to Utku BERBEROĞLU)


2.6.5 (06.03.2020):

* Fixed bug when editing page number causing page to deselect and thumbnails to
  scroll to top of list
* Use a scrolled window in the multiple message dialog to prevent it from
  growing too large.
* Use the "Don't show these messages again" checkbox to switch the checkboxes
  for the individual messages. Set the button inconsistent if the states are not
  all the same.
* Fix warning message about pdftk (again) by making sure that user-defined tmp
  directory is available in time.
* Improve responsiveness with OCR output (again). Closes bug #192 (Sometimes
  after saving a PDF, the page selection UI becomes sluggish/unresponsive)
* Select # pages = all when switching from reverse->facing.
  Closes bug #344 (# Pages in Scan Document dialog reverts to # from All)
* Show "waiting" cursor for longer to prevent scans from being started before
  all options applied.
* Respect 'Use timezone from locale' option when setting file system timestamp
* Update to Hungarian translation (thanks to csola)
* Update to German translation (thanks to Martin Butter)
* Update to Spanish translation (thanks to rodroes)
* Update to Ukrainian translation (thanks to Yuri Chornoivan)


2.6.4 (06.02.2020):

* Limit the number of pages to scan when switching between scanning facing and
  reverse pages.
* Fix scan dialog if no devices found (again).
* Improve responsiveness with OCR output
* + 'Ignore duplex capabilities of scanner' preferences option. Closes feature